--- a/private/template/release.html
+++ b/private/template/release.html
@@ -122,6 +122,7 @@
 	<div class="modal-dialog" style="width: 550px;">
 		<div class="modal-content">
 			<div class="modal-header">
+				<button type="button" class="close" data-dismiss="modal">&times;</button>
 				<h4 class="modal-title" id="avatarInfo">Работа над релизом [{releaseid}]</h4>
 			</div>
 			<div class="modal-body">
