--- a/private/template/release.html
+++ b/private/template/release.html
@@ -80,6 +80,7 @@
 		<b><a href="#" data-show-other style="color: #000;">Работа над релизом</a>:</b> {other}<br>
 		<hr class="poloska-detail" style="margin-top: 7px; margin-bottom: 7px;">
 		<p class="detail-description" style="font-size: 15.7px;">{description}</p>
+		{bugreport-button}
 	</div>
 	<div class="detail_torrent_side">
 		<div id="nextserial" {style}>
