--- a/private/template/release.html
+++ b/private/template/release.html
@@ -99,7 +99,7 @@
 		<div class="tab-content">
 			<button id="buttonAni" data-tab="anilibriaPlayer" class="active">Наш плеер</button>
 			<button id="buttonMoon" data-tab="moonPlayer" style="display: none;">Внешний плеер</button>
-			<button id="buttonIntentShare">Плеер Android</button>
+			<button id="buttonIntentShare" disabled>Плеер Android</button>
 			<button data-light class="xdark z-fix">Свет</button>
 			{button}
 			<button data-online-table class="presence_online"></button>
