--- a/private/template/playerjs.html
+++ b/private/template/playerjs.html
@@ -26,7 +26,7 @@
 					.file
 					.split(",")
 					.map(it => ({
-						quality: it.match(/\[(\d{1,}p)\]/)[1],
+						quality: it.match(/\[(\d{3,4}p)\]/)[1],
 						link: it.match(/\/\/(.+)$/)[1]
 					}));
 				// get a link with the specified quality
